@@ -1,14 +1,13 @@
 package com.meemaw.testcontainers;
 
-import com.meemaw.resource.v1.beacon.BeaconResourceImplTest;
 import org.junit.jupiter.api.extension.BeforeAllCallback;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import org.testcontainers.junit.jupiter.Container;
-import org.testcontainers.junit.jupiter.Testcontainers;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 public class PostgresExtension implements BeforeAllCallback {
 
@@ -21,10 +20,10 @@ public class PostgresExtension implements BeforeAllCallback {
             POSTGRES.start();
         }
 
-        Path sqlFolder = Path.of(BeaconResourceImplTest.class.getResource(
-                "/sql").toURI());
+        String projectPath = System.getProperty("user.dir");
+        Path migrationsSqlPath = Paths.get(projectPath, "..", "page-service-migrations", "sql");
 
-        Files.walk(sqlFolder).filter(path -> !Files.isDirectory(path)).forEach(path -> {
+        Files.walk(migrationsSqlPath).filter(path -> !Files.isDirectory(path)).forEach(path -> {
             try {
                 POSTGRES.client()
                         .query(Files.readString(path))
